Fixed mobile overflow for devlog.html

--- a/StyleSheets/homestyle.css
+++ b/StyleSheets/homestyle.css
@@ -424,32 +424,6 @@ html, body {
 
 
 
-#NMS_notice
-{
-  padding: 0 0 1% 15.25%;
-  margin: 0;
-}
-
-.AboutText
-{
-  float: right;
-}
-
-#AboutH1
-{
-  color: #DEE8E7;
-  font-size: 64px;
-}
-
-#AboutDesc1
-{
-
-  color: #DEE8E7;
-  padding-right: 30%;
-}
-
-
-
 footer h5
 {
   text-align: center;
@@ -495,6 +469,7 @@ div.scroll-container img {
   color: white; 
   font-family: LexendThin; 
   background-color: #040404;
+  overflow-x: hidden;
 }
 
 .Builds
@@ -508,7 +483,8 @@ div.scroll-container img {
 {
   color: white; 
   font-family: Lexend; 
-  background-image: linear-gradient(#040404, black)
+  background-image: linear-gradient(#040404, black);
+  overflow-x: hidden;
 }
 
 
@@ -832,13 +808,14 @@ KeyFeaturesOL li
 .MobileNewsBlock
 {
   height: 100%;
-  width: 500px;
+  width: 80%;
   text-align: left;
   padding: 0;
-  margin: 0 5% 10% 5%;
+  margin: 0 0 10% 10%;
   transition: transform 0.1s ease-out; 
   overflow: hidden; 
   box-shadow: black 8px 8px 8px;
+
 }
 
 .NewsBlock img
@@ -849,10 +826,8 @@ KeyFeaturesOL li
 
 .MobileNewsBlock img
 {
-  width: 60%;
+  width: 100%;
   border: 3px black solid;
-  margin-left: 5%;
-  margin-right: 5%;
 }
 
 .NewsBlock:hover
